--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ethereum-ocm",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Solidity object contract mapping (OCM)",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,11 @@
     "prepublish": "npm run compile"
   },
   "author": "Vitiko <vitiko@mail.ru>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vitiko/ethereum-ocm.git"
+  },
+
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.22.2",
